# stackd

./: .gitignore  CMakeLists.txt  README.md
example/: example.cpp  example_ptr.cpp
include/: stackd.hpp
src/: compiler.hpp  demangle.cpp  demangle.hpp  stacktrace.cpp  stacktrace.hpp  utility.cpp  utility.hpp
